--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "*.{js,css,md,vue}": "prettier --write"
   },
   "dependencies": {
-    "consola": "^3.2.3"
+    "consola": "^3.2.3",
+    "core-js": "^3.35.0"
   }
 }
