--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,12 +22,15 @@
     "types": [
       "vite/client",
     ],
-    "paths": {
-      "~~/*": [
-        "./*"
-      ],
-    }
   },
+  "include": [
+    "src",
+    "cypress",
+  ],
+  "exclude": [
+    "dist",
+    "node_modules",
+  ],
   "vueCompilerOptions": {
     "target": "auto",
   },
