--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,86 @@
 			"pluginRepo": "https://github.com/grimoh/asdf-act.git",
 			"latestVersionPattern": "[0-9]"
 		}
+	},
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Codeium.codeium",
+				"antfu.iconify",
+				"antfu.unocss",
+				"antfu.goto-alias",
+				"csstools.postcss",
+				"vue.volar",
+				"lokalise.i18n-ally",
+				"streetsidesoftware.code-spell-checker",
+				"dbaeumer.vscode-eslint",
+				"alefragnani.Bookmarks",
+				"christian-kohler.npm-intellisense",
+				"aaron-bond.better-comments",
+				"kisstkondoros.vscode-gutter-preview",
+				"ChakrounAnas.turbo-console-log",
+				"VisualStudioExptTeam.intellicode-api-usage-examples",
+				"oderwat.indent-rainbow",
+				"steoates.autoimport",
+				"BracketPairColorDLW.bracket-pair-color-dlw",
+				"esbenp.prettier-vscode",
+				"VisualStudioExptTeam.vscodeintellicode",
+				"VisualStudioExptTeam.vscodeintellicode-completions",
+				"mikestead.dotenv",
+				"EditorConfig.EditorConfig",
+				"eamodio.gitlens",
+				"christian-kohler.path-intellisense",
+				"redhat.vscode-yaml",
+				"be5invis.vscode-icontheme-nomo-dark",
+				"tombonnike.vscode-status-bar-format-toggle",
+				"lacroixdavid1.vscode-format-context-menu",
+				"micnil.vscode-checkpoints",
+				"IBM.output-colorizer",
+				"stkb.rewrap",
+				"formulahendry.auto-rename-tag",
+				"formulahendry.auto-close-tag",
+				"wmaurer.change-case",
+				"Tyriar.sort-lines",
+				"piotrpalarz.vscode-gitignore-generator",
+				"bodil.file-browser",
+				"wayou.vscode-todo-highlight",
+				"xyz.local-history",
+				"usernamehw.errorlens",
+				"richie5um2.vscode-sort-json",
+				"anteprimorac.html-end-tag-labels",
+				"p1c2u.docker-compose",
+				"jeff-hykin.better-dockerfile-syntax",
+				"bierner.color-info",
+				"ctcuff.font-preview",
+				"bradlc.vscode-tailwindcss",
+				"DotJoshJohnson.xml",
+				"softwaredotcom.music-time",
+				"formulahendry.github-actions",
+				"kisstkondoros.vscode-codemetrics",
+				"quicktype.quicktype",
+				"stylelint.vscode-stylelint",
+				"pflannery.vscode-versionlens",
+				"vivaxy.vscode-conventional-commits",
+				"tamasfe.even-better-toml",
+				"pranaygp.vscode-css-peek",
+				"vscodevim.vim",
+				"cimdalli.git-commit-amend-push-force",
+				"NathanMinchow.create-matching-css-file",
+				"wix.vscode-import-cost",
+				"GitHub.remotehub",
+				"styled-components.vscode-styled-components",
+				"foxundermoon.shell-format",
+				"buster.ndjson-colorizer",
+				"kamikillerto.vscode-colorize",
+				"devlos.vuejs-snippets",
+				"mariusschulz.yarn-lock-syntax",
+				"Nuxt.mdc",
+				"Vue.volar",
+				"Nuxtr.nuxtr-vscode",
+				"heybourn.headwind",
+				"VinoSamari.tailwind-titan"
+			]
+		}
 	}
 	// Features to add to the dev container. More info: https://containers.dev/features.
 	// "features": {},
