--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,10 @@
   "i18n-ally.sortKeys": true,
   "[jsonc]": {
     "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "typescript.tsdk": "node_modules/typescript/lib",
+  "volar.takeOverMode.extension": "Vue.volar",
+  "[typescript]": {
+    "editor.defaultFormatter": "dbaeumer.vscode-eslint"
   }
 }
