--- a/packages/lib-vue3/package.json
+++ b/packages/lib-vue3/package.json
@@ -24,10 +24,10 @@
     "src"
   ],
   "scripts": {
-    "dev": "pnpm cypress open --component --browser=electron",
+    "dev": "pnpm cypress open --component --browser=firefox",
     "test:ci": "run-s test:unit test:component",
     "test:unit": "pnpm vitest",
-    "test:component": "pnpm cypress run --component --browser=electron",
+    "test:component": "pnpm cypress run --component --browser=firefox",
     "build": "vite build",
     "build:watch": "vite build --watch",
     "clean": "rimraf dist",
@@ -41,6 +41,7 @@
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "@vue-bridge/vite-plugin": "^0.2.0",
+    "jsdom": "^23.2.0",
     "vite": "5.0.0",
     "vue": "^3.4.13"
   }
